Add CSS Styling with some pictures and javascript flair.

--- a/Paper-Scissors-Rock/wwwroot/css/styles.css
+++ b/Paper-Scissors-Rock/wwwroot/css/styles.css
@@ -1,3 +1,36 @@
 body {
-  background-color: skyblue;
+  background-image: url("/img/piratebackground.jpg");
+  background-size: cover;
+  font-family: 'MedievalSharp', cursive;
+  font-size: 30px;
+}
+
+h1 {
+  text-align: center;
+}
+
+img {
+  height: 50px;
+  width: 50px;
+}
+
+.well {
+  width: 30%;
+  margin: 20px;
+}
+
+#player2 {
+  display: none;
+}
+
+#player1waiting {
+  display: none;
+}
+
+button {
+  margin: 30px;
+}
+
+submitbutton {
+  text-align: center;
 }
