--- a/Paper-Scissors-Rock/Views/Shared/_Layout.cshtml
+++ b/Paper-Scissors-Rock/Views/Shared/_Layout.cshtml
@@ -2,11 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Favorite Attractions</title>
+    <title>Scissors Paper Rock</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
     <link rel="stylesheet" href="/css/styles.css">
-  </head>
+    <link href="https://fonts.googleapis.com/css?family=MedievalSharp" rel="stylesheet">
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.js"
+      integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+      crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
+
+</head>
   <body>
+    <h1>Scissor Paper Rock</h1>
     @RenderBody()
   </body>
 </html>
